# random

./: README
daily/: README  daily
git-quiz/: FoldDir.hs  GitRepos.hs  Main.hs  Quiz.hs  README  ShellUtil.hs  Shuffle.hs  gitTest.cabal
git-test/: FileInfo.hs  FileUtil.hs  GitRepos.hs  Main.hs  Quiz.hs  README  gitTest.cabal
logCleanup/: LogCleanup.hs  LogFiles.hs  README  logCleanup.cabal
workweek/: README  workweek
