name:                git-quiz
Version:             0.2
Description:         quiz your git
Author:              Michael Hoy
Build-Type:          Simple
Cabal-Version:       >=1.2

Executable git-quiz
  Main-is: Main.hs
  Build-Depends: base >= 3
                 , filepath >= 1.3
                 , directory >= 1.1
                 , random >= 1.0
                 , process >= 1.1
                 , old-time >= 1.1
                 , array >= 0.4
